hphp/test/zend/good/ext-standard-versioning/php_sapi_name.php
<?php

var_dump(php_sapi_name());
