hphp/test/zend/bad/ext-intl/bug61487.php
<?php
var_dump(grapheme_stripos(1,1,2147483648));
var_dump(grapheme_strpos(1,1,2147483648));